hphp/test/zend/good/tests/classes/class_final.php.expectf

Fatal error: Class derived may not inherit from final class (base) in %s/class_final.php on line 9
